<resources>
    <string name="app_name">Carros Kotlin</string>
    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="action_editar">Editar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_deletar">Deletar</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo dos Carros</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]>
	</string>
    <string name="about_dialog_title">Livro Android</string>
    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configuraçõeses</string>
    <string name="classicos">Clássicos</string>
    <string name="classico">Clássico</string>
    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="esportivo">Esportivos</string>

    <!-- F -->
    <string name="favoritos">Favoritos</string>

    <!-- L -->
    <string name="latitudeLongitude">Latitude / Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="luxo">Luxo</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_sem_internet">Sem internet.</string>
    <string name="msg_aguarde">Por favor aguarde…</string>
    <string name="msg_carro_favoritado">Carro adicionado aos favoritado.</string>
    <string name="msg_carro_desfavoritado">Carro removido do favoritados.</string>
    <string name="msg_carro_salvo">Carro salvo com sucesso</string>
    <string name="msg_carro_deletado">Carro excluído com sucesso</string>
    <string name="msg_confirma_excluir_carro">Confirma excluir este carro?</string>
    <string name="msg_carro_excluido">Carro excluído com sucesso</string>
    <string name="msg_error_form_nome">Nome é obrigatório</string>
    <string name="msg_error_form_desc">Descrição é obrigatório</string>

    <!-- N -->
    <string name="nao">Não</string>
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="nome">Nome</string>
    <string name="novo_carro">Novo Carro</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="site_do_livro">Site do Livro</string>
    <string name="sim">Sim</string>
    <string name="sobre">Sobre</string>

    <!-- U -->
    <string name="url_video">Vídeo</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>

    <!-- T -->
    <string name="test_sons">Testar Sons</string>
    <string name="tipo">Tipo</string>
    <string name="test_google_play_location_notification">Testar Google Play Services (Location) e Notificação</string>
    <string name="test_broadcast_receiver_estatico">Teste BroadcastReceiver Estatico</string>
    <string name="test_broadcast_receiver_dinamico">Teste BroadcastReceiver Dinamico</string>
    <string name="test_service">Teste Service</string>
    <string name="test_alarm_manager">Teste Alarm Manager</string>

</resources>