<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Lista com todos os carros -->
        <item
            android:id="@+id/nav_item_carros_todos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/carros" />
        <!-- Lista com os carros clássicos -->
        <item
            android:id="@+id/nav_item_carros_classicos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/classicos" />
        <!-- Lista com os carros esportivos -->
        <item
            android:id="@+id/nav_item_carros_esportivos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/esportivos" />
        <!-- Lista com os carros de luxo -->
        <item
            android:id="@+id/nav_item_carros_luxo"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/luxo" />
        <!-- WebView com informações sobre o livro -->
        <item
            android:id="@+id/nav_item_site_livro"
            android:icon="@drawable/ic_drawer_site_livro"
            android:title="@string/site_do_livro" />
        <!-- Tela de configurações -->
        <item
            android:id="@+id/nav_item_sound"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_sons" />
        <item
            android:id="@+id/nav_item_google_play_services"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_google_play_location_notification" />
        <item
            android:id="@+id/nav_item_broadcast_receiver_estatico"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_broadcast_receiver_estatico" />
        <item
            android:id="@+id/nav_item_broadcast_receiver_dinamico"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_broadcast_receiver_dinamico" />
        <item
            android:id="@+id/nav_item_service"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_service" />
        <item
            android:id="@+id/nav_item_alarm_manager"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/test_alarm_manager" />
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/configuracoes" />
    </group>
</menu>